--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "intervention/image": "^3.7",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
+        "silviolleite/laravelpwa": "^2.0",
         "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "require-dev": {
